Fixed bug in NMEA parser!

--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -560,7 +560,12 @@ OK!
 
 >
 \end{lstlisting}
-It is also possible to assume the role of a Sensor by connecting to the server via telnet. This can be used to debug or troubleshoot the Sensor Server by manually feeding it NMEA data. It should be noted that 
+It is also possible to assume the role of a Sensor by connecting to the server via telnet. This can be used to debug or troubleshoot the Sensor Server by manually feeding it NMEA data:
+
+\begin{lstlisting}
+NMEA$GNRMC,113925.00,A,5958.54485,N,01102.19604,E,0.008,,131016,,,A*6E$GNGGA,113925.00,5958.54485,N,01102.19604,E,1,12,0.61,126.4,M,37.8,M,,*47
+
+\end{lstlisting}
 
 
 Another possibility is to 
