--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -560,13 +560,19 @@ OK!
 
 >
 \end{lstlisting}
-It is also possible to assume the role of a Sensor by connecting to the server via telnet. This can be used to debug or troubleshoot the Sensor Server by manually feeding it NMEA data:
+It is also possible to assume the role of a Sensor by connecting to the server via telnet. This can be used to debug or troubleshoot the Sensor Server by manually feeding it NMEA data. The only requirement is that the communication is Sensor Server protocol compliant:
 
 \begin{lstlisting}
-NMEA$GNRMC,113925.00,A,5958.54485,N,01102.19604,E,0.008,,131016,,,A*6E$GNGGA,113925.00,5958.54485,N,01102.19604,E,1,12,0.61,126.4,M,37.8,M,,*47
+user@machine:/$ telnet 10.1.0.46 10001
+Trying 10.1.0.46...
+Connected to 10.1.0.46.
+Escape character is '^]'.
+ID 2
+OK!
 
+NMEA<GNRMC><GNGGA>
+OK!
 \end{lstlisting}
-
 
 Another possibility is to 
 
