Added example interface script

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -5,8 +5,10 @@
 \section{CSAC Logger source code}\label{CL}
 	\pythoncode{./source_files/csac_logger.py}
 \section{GPS Logger source code}\label{GL}
-	\pythoncode{./source_files/gps_logger.py}	
-
+	\pythoncode{./source_files/gps_logger.py}
+\section{GPS Logger source code}\label{server_script}
+	\pythoncode{./source_files/script_example.py}
+	
 \chapter{Sensor server software}
 \section{Client}
 \subsection*{sensor\_client.c}\label{sensor_server.c}
