--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -570,11 +570,10 @@ Escape character is '^]'.
 ID 2
 OK!
 
-NMEA<GNRMC><GNGGA>
+NMEA<GNRMC part of NMEA><GNGGA part of NMEA>
 OK!
 \end{lstlisting}
-
-Another possibility is to 
+One can write scripts that interface with Sensor Server by using an implementation of Sockets. An example of such a script can be found in the appendix (\ref{script_example}).
 
 \begin{table}
 	\caption{Sensor Server available commands}
